# Patchwork-of-Code-

./: CNAME  README.md
FTP/server/: Makefile
FTP/server/commands/: cwd.c  noop.c  pass.c  pasv.c  port.c  quit.c  stor.c
FTP/server/src/: server.c
FTP/utils/: return.h
first_3d_game/: CMakeLists.txt
first_3d_game/include/: Bombe.hpp  Button.hpp  Core.hpp  Platform.hpp  collider.hpp
first_3d_game/src/: Button.cpp  Camera.cpp  Core.cpp  Platform.cpp  collider.cpp  main.cpp
little_indeed/1_database/: dump_1.sql
little_indeed/step1/: joboard.sql
little_indeed/step3/: index.html  joboard.sql
little_indeed/step4/job_api/app/Models/: Company.php  Job.php  User.php
little_indeed/step4/job_api/config/: auth.php
little_indeed/step4/job_api/database/migrations/: 2021_09_29_114625_create_documents_table.php
little_indeed/step4/js/: JobAPI.js  main.js
little_indeed/step4/view/: login.html
little_indeed/step5/job_api/app/Models/: Job.php  ParentField.php
little_indeed/step5/js/: JobAPI.js  applyModal.js
little_indeed/step5/view/: index.html  style.css
little_indeed/step6/job_api/app/Http/: Kernel.php
little_indeed/step6/job_api/routes/: api.php
little_indeed/step6/js/: admin.js  admin_add_item.js  applyModal.js  edit_modal.js  main.js  navbar.js  pagination_admin.js  redirect.js
little_indeed/step6/view/: applications.html  company.html  user.html
little_indeed/step7&8/job_api/routes/: api.php
little_indeed/step7&8/js/: JobAPI.js  admin_modals.js  applications.js  navbar.js  pagination_admin.js  register_login.js
little_indeed/step7&8/view/: admin.html  index.html
little_interpretor/: Makefile
little_interpretor/example/: for_test_four.txt  for_test_one.txt  test_advanced.txt
little_interpretor/include/: Double.hpp  Exceptions.hpp  Factory.hpp  IOperand.hpp  Int16.hpp  Type.hpp  extern_lib.hpp  roundOperand.hpp
little_interpretor/src/: Exceptions.cpp  Float.cpp  Parser.cpp  Stack.cpp  roundOperand.cpp
little_interpretor/tests/: test_add.cpp  test_div.cpp  test_mod.cpp  test_parsing.cpp  test_stack.cpp  test_sub.cpp
my_scrap/: JsonStorage.py  Scrap.py  config.py  main.py
src/code/FTP/: Makefile
src/code/FTP/server/: main.c
src/code/first_3d_game/: script.sh
src/code/first_3d_game/include/: Camera.hpp  Map.hpp  Player.hpp  Shared.hpp
src/code/first_3d_game/src/: Bombe.cpp  Map.cpp  Player.cpp
src/code/little_indeed/: README.md
src/code/little_indeed/1_database/: dump.sql  joboard.sql
src/code/little_indeed/3_front/: jobAPI.js
src/code/little_indeed/step2/: index.html  main.js
src/code/little_indeed/step3/: main.js
src/code/little_interpretor/: CMakeLists.txt  CMakeLists.txt.in
src/code/little_interpretor/example/: example1.txt  for_test_tree.txt  for_test_two.txt  test_advanced2.txt
src/code/little_interpretor/include/: BigDecimal.hpp  Core.hpp  Float.hpp  Int32.hpp  Int8.hpp  Parser.hpp  Stack.hpp
src/code/little_interpretor/src/: BigDecimal.cpp  Core.cpp  Double.cpp  Factory.cpp  Int16.cpp  Int32.cpp  Int8.cpp  is_empty.cpp  main.cpp
src/code/little_interpretor/tests/: test_core.cpp  test_factory.cpp  test_mul.cpp  test_roundOperand.cpp
src/code/my_scrap/: Scrap.py  config.py  main.py  test.text
src/code/trade/: Makefile
src/code/trade/src/: main.cpp
trade/include/: trade.hpp
trade/src/: init.cpp  trade.cpp
(+81 files in other folders)
